[gd_scene load_steps=43 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Player/BarkArea.gd" type="Script" id=3]
[ext_resource path="res://Player/DogAnim.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.763
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Bark"
tracks/0/type = "value"
tracks/0/path = NodePath("BarkArea/BarkShape:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BarkArea/BarkShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.43441, 60.0, 6.5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bark_animation_finished"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 8.7, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, -12 ), Vector2( -3, -15 ), Vector2( 0, -10 ), Vector2( -3, -12 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 6.5

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "BarkLeft"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "BarkRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "BarkDown"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "BarkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=37]
blend_point_0/node = SubResource( 33 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 34 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 35 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 36 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "SitLeft"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "SitDown"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "SitRight"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "SitUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.2 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 28 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 29 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/Bark/node = SubResource( 37 )
states/Bark/position = Vector2( 367, 163.62 )
states/Idle/node = SubResource( 23 )
states/Idle/position = Vector2( 367, 80 )
states/Run/node = SubResource( 30 )
states/Run/position = Vector2( 534, 80 )
transitions = [ "Idle", "Run", SubResource( 31 ), "Run", "Idle", SubResource( 32 ), "Bark", "Idle", SubResource( 38 ), "Idle", "Bark", SubResource( 39 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 37.62 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[sub_resource type="Animation" id=7]
resource_name = "BarkDown"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
resource_name = "BarkLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59, 60, 61 ]
}

[sub_resource type="Animation" id=9]
resource_name = "BarkRight"
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=10]
resource_name = "BarkUp"
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=11]
resource_name = "SitDown"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}

[sub_resource type="Animation" id=18]
resource_name = "SitLeft"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 62, 63 ]
}

[sub_resource type="Animation" id=12]
resource_name = "SitRight"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}

[sub_resource type="Animation" id=13]
resource_name = "SitUp"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 34, 35 ]
}

[sub_resource type="Animation" id=14]
resource_name = "WalkDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=15]
resource_name = "WalkLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=16]
resource_name = "WalkRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=17]
resource_name = "WalkUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvancedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 223.237, 175.796 )
script = ExtResource( 1 )

[node name="BarkTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -3, -12 )
scale = Vector2( 0.593291, 0.611376 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.84048 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bark = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Move = SubResource( 4 )

[node name="BarkArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource( 3 )

[node name="BarkShape" type="CollisionShape2D" parent="BarkArea"]
light_mask = -2147483647
position = Vector2( 0.146423, -0.23743 )
shape = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AdvancedAnimationPlayer")
active = true
parameters/playback = SubResource( 25 )
parameters/Bark/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( -0.000780106, -0.000430942 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="AdvancedAnimationPlayer" type="AnimationPlayer" parent="."]
anims/BarkDown = SubResource( 7 )
anims/BarkLeft = SubResource( 8 )
anims/BarkRight = SubResource( 9 )
anims/BarkUp = SubResource( 10 )
anims/SitDown = SubResource( 11 )
anims/SitLeft = SubResource( 18 )
anims/SitRight = SubResource( 12 )
anims/SitUp = SubResource( 13 )
anims/WalkDown = SubResource( 14 )
anims/WalkLeft = SubResource( 15 )
anims/WalkRight = SubResource( 16 )
anims/WalkUp = SubResource( 17 )

[node name="AdvancedSprite" type="Sprite" parent="."]
position = Vector2( -3, -7.75 )
texture = ExtResource( 4 )
hframes = 64
frame = 63
[connection signal="timeout" from="BarkTimer" to="." method="_on_BarkTimer_timeout"]
